<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#dfdfdf">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#FF009688"
        android:textColor = "#ffffff"
        android:text="@string/page3_title"
        android:textSize ="@dimen/dialog_textSize"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:text="@string/page_signal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_marginBottom="10dp"
        android:layout_gravity="bottom|center_horizontal"
        android:textSize="@dimen/page_position" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/page3_text1"
        android:textSize="@dimen/dialog_textSize"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center" />

</FrameLayout>