<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#dfdfdf">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#FF009688"
        android:textColor = "#ffffff"
        android:text="@string/page2_title"
        android:textSize ="@dimen/dialog_textSize"
        android:gravity="center_vertical|center_horizontal" />

    <ImageView
        android:id="@+id/page_img"
        android:src="@drawable/scs_news"
        android:layout_width ="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="300dp"
        android:layout_marginBottom="40dp" />


    <TextView
        android:text="@string/page_signal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/page_position" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/page2_text1"
        android:textSize="@dimen/dialog_textSize"
        android:layout_marginTop="50dp"
        android:gravity="center" />

</FrameLayout>